--- a/app/src/main/res/layout/itemview_overview.xml
+++ b/app/src/main/res/layout/itemview_overview.xml
@@ -1,51 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <CheckBox
-        android:focusable="false"
-        android:id="@+id/itemDone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:padding="20dp"
+        android:weightSum="1">
 
-        <TextView
-            android:id="@+id/itemName"
-            android:layout_width="match_parent"
+        <CheckBox
+            android:id="@+id/itemDone"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Jala"
-            android:textSize="20sp" />
+            android:focusable="false" />
 
-        <TextView
-        android:id="@+id/duedate"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="13dp"
-        android:text="DATUM"
-        android:textSize="15sp"
-        android:textStyle="italic" />
+        <LinearLayout
+            android:layout_width="198dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="0.68">
+
+            <TextView
+                android:id="@+id/itemName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Jala"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/duedate"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="13dp"
+                android:focusable="false"
+                android:text="DATUM"
+                android:textSize="15sp"
+                android:textStyle="italic" />
+
+        </LinearLayout>
 
         <CheckBox
             android:id="@+id/favStatus"
-            android:button="@drawable/toggle_selector"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="34dp"
             android:layout_marginRight="34dp"
-            android:focusable="false"
-            android:layout_alignBaseline="@+id/doneButton"
-            android:layout_alignBottom="@+id/doneButton"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_weight="0.15"
+            android:button="@drawable/fav"
+            android:focusable="false" />
+
 
     </LinearLayout>
 
