--- a/app/src/main/res/layout/activity_detailview.xml
+++ b/app/src/main/res/layout/activity_detailview.xml
@@ -5,7 +5,8 @@
     android:paddingBottom="16dp"
     android:paddingTop="16dp"
     android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    android:paddingRight="16dp"
+    android:id="@+id/layout">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/text_input_layout_name"
