--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,8 @@
         android:id="@+id/textView_login"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textSize="20sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,24 +24,24 @@
         android:id="@+id/textView_username"
         android:layout_marginTop="66dp"
         android:layout_below="@+id/textView_login"
-        android:layout_alignRight="@+id/textView_login"
-        android:layout_alignEnd="@+id/textView_login" />
+        android:textSize="20sp"/>
 
     <TextView
+        android:id="@+id/textView_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/password_text"
-        android:id="@+id/textView_password"
-        android:layout_below="@+id/editText_user"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/editText_user"
+        android:text="@string/password_text"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="20sp" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
-        android:text="user@user.de"
+        android:text="s@bht.de"
         android:ems="10"
         android:id="@+id/editText_user"
         android:layout_alignTop="@+id/textView_username"
@@ -52,7 +53,7 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:digits="0123456789"
-        android:text="123456"
+        android:text="000000"
         android:ems="10"
         android:id="@+id/editText_password"
         android:layout_below="@+id/editText_user"
@@ -68,7 +69,8 @@
         android:layout_below="@+id/editText_password"
         android:layout_marginTop="59dp"
         android:layout_alignRight="@+id/textView_username"
-        android:layout_alignEnd="@+id/textView_username" />
+        android:layout_alignEnd="@+id/textView_username"
+        android:textSize="20sp"/>
 
     <TextView
         android:layout_width="fill_parent"
@@ -88,5 +90,7 @@
         android:layout_alignLeft="@+id/textView_password"
         android:layout_alignStart="@+id/textView_password"
         android:layout_marginTop="60dp"
-        android:enabled="true"/>
+        android:enabled="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
