--- a/app/src/main/res/layout/itemview_overview.xml
+++ b/app/src/main/res/layout/itemview_overview.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="20dp"
         android:weightSum="1">
@@ -15,46 +15,52 @@
         <CheckBox
             android:id="@+id/itemDone"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="20dp"
             android:focusable="false" />
 
         <LinearLayout
-            android:layout_width="198dp"
+            android:layout_width="800dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_weight="0.68">
+            android:layout_weight="0.68"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/itemName"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Jala"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/duedate"
-                android:layout_width="100dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginTop="13dp"
+                android:layout_marginTop="6dp"
                 android:focusable="false"
                 android:text="DATUM"
-                android:textSize="15sp"
-                android:textStyle="italic" />
+                android:textSize="12sp" />
 
         </LinearLayout>
 
-        <CheckBox
-            android:id="@+id/favStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="34dp"
-            android:layout_marginRight="34dp"
-            android:layout_weight="0.15"
-            android:button="@drawable/fav"
-            android:focusable="false" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="right">
 
+            <CheckBox
+                android:id="@+id/favStatus"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="right"
+                android:layout_marginEnd="34dp"
+                android:layout_marginRight="34dp"
+                android:layout_weight="0.02"
+                android:button="@drawable/toggle_fav"
+                android:focusable="false" />
+        </LinearLayout>
 
     </LinearLayout>
 
